--- a/static/resources/css/watney.css
+++ b/static/resources/css/watney.css
@@ -221,6 +221,19 @@ body {
 .mail-overview .mails {
     overflow-y: scroll;
     height: 100%;
+    border: 2px solid #FFF;
+}
+.mail-overview .mails .empty-folder-message {
+    text-align: center;
+    font-size: 65px;
+    color: rgba(136, 135, 135, 0.47);
+    height: 100%;
+    position: absolute;
+    top: 35%;
+    font-weight: bold;
+    font-family: Battlestar;
+    letter-spacing: 5px;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
 }
 /* Have every 2nd row element in a slightly different color to get striped rows */
 div#mailItems > div.row:nth-of-type(2n) {
