--- a/static/resources/css/watney.css
+++ b/static/resources/css/watney.css
@@ -218,6 +218,30 @@ body {
 .mail-overview .header .subject {
     border-right: 2px solid white;
 }
+.mail-overview .search > input,
+.mail-overview .search .label-input-label {
+    font-size: 25px;
+    background-color: #666666;
+    border-radius: 10px 10px 10px 10px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    width: 100%;
+    padding-left: 40px;
+    padding-right: 5px;
+    color: white;
+}
+.mail-overview .search .label-input-label-disabled {
+    background-color: rgb(251, 73, 73);
+}
+/* style icon */
+.mail-overview .search .glyphicon {
+    position: absolute;
+    padding: 10px;
+    pointer-events: none;
+    font-size: 1.7em;
+    top: 60px;
+    color: #A7A7A7;
+}
 .mail-overview .mails {
     overflow-y: scroll;
     height: 100%;
