--- a/static/templates/mails.html
+++ b/static/templates/mails.html
@@ -12,6 +12,11 @@
                         <div>Date</div>
                     </div>
                 </div>
+                <!-- Search bar -->
+                <div id="OverviewSearchBar" class="row search">
+                    <i class="glyphicon glyphicon-search" aria-hidden="true"></i>
+                    <!--<span class="glyphicon glyphicon-search" aria-hidden="true"></span>-->
+                </div>
                 <!-- Mails -->
                 <div class="row mails">
                     <div id="mailItems" class="col-md-12">
