--- a/static/templates/mails.html
+++ b/static/templates/mails.html
@@ -50,7 +50,8 @@
                 <div id="ctrlBarContainer" class="col-md-12"></div>
             </div>
             <!-- Mail content row -->
-            <div class="row content">
+            <div id="mailDetails_Content_Container" class="row content">
+                <div id="imgWarning_Content" class="col-md-12"></div>
                 <div id="mailDetails_Content" class="col-md-12" style="overflow-x: hidden;"></div>
             </div>
             <!-- New Mail Windows -->
