--- a/static/templates/mails.html
+++ b/static/templates/mails.html
@@ -32,16 +32,16 @@
             <div class="row header">
                 <div class="col-md-12">
                     <div class="row">
-                        <div class="col-md-1">From:</div>
-                        <div id="mailDetails_From" class="col-md-11"></div>
+                        <div class="col-sm-2 subject-label">Subject:</div>
+                        <div id="mailDetails_Subject" class="col-md-10 subject"></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-1">Subject:</div>
-                        <div id="mailDetails_Subject" class="col-md-11"></div>
+                        <div class="col-sm-2 from-label">From:</div>
+                        <div id="mailDetails_From" class="col-md-10 from"></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-1">To:</div>
-                        <div id="mailDetails_To" class="col-md-11"></div>
+                        <div class="col-md-2 to-label">To:</div>
+                        <div id="mailDetails_To" class="col-md-10 to"></div>
                     </div>
                 </div>
             </div>
